--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.calk">
+    package="com.example.note">
 
     <application
         android:allowBackup="true"
@@ -8,9 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Calk">
+        android:theme="@style/Theme.Note">
         <activity
-            android:name=".ActivitySettings"
+            android:name=".NoteTakerActivity"
+            android:theme="@style/Theme.Note.NoActionBar"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
